public/stylesheets/main.css
html {
  min-height: 100%;
}

body {
  padding-bottom: 100px;
  padding-top: 60px;
  background: linear-gradient(to bottom right, rgba(10, 100, 255, 1), rgba(10,10,125,1));
  background-repeat: no-repeat;
  color: white;
  font-size: 16px;
}

ul, input {
  color: black;
}

h1, h2, h3, h4, h5, h6, p {
  word-wrap: break-word;
}

.navbar {
  background-color: rgb(10,10,125);
  border: none;
  box-shadow: 0 0 5px 2px rgba(0,0,0,0.5);
}

.navbar-inverse .navbar-nav > li.active-page > .nav-link {
  border-bottom-color: #1090FF;
}

.navbar-inverse .navbar-nav > li > .nav-link, .navbar-inverse .navbar-brand {
  color: white;
  border-top: 3px solid transparent;
  border-bottom: 3px solid transparent;
  height: 100%;
}

.navbar-inverse .navbar-nav > li > .nav-link:hover {
  border-bottom-color: #1090FF;
}

.center {
  text-align: center;
}

.hidden {
  display: none;
}

.new-list-permissions {
  text-align: left;
}

.list-permissions {
  overflow: hidden;
  -webkit-backface-visibility: hidden;

}

.list-contents {
  transform-origin: top;
  max-height: 1000px;
  -webkit-backface-visibility: hidden;
}

.list-hidden {
  max-height: 0;
}

.permissions-header {
  color: #242424;
  background-color: #FFF;
  margin: 0;
  border-bottom: 1px solid #ddd;
  padding: 10px 15px;
  font-size: 1.3em;
  text-align: center;
  border-top-left-radius: 4px;
  border-top-right-radius: 4px;
  overflow: hidden;
}

.permissions-header:hover {
  cursor: pointer;
}

.list-permissions li:first-child {
  border-radius: 0;
}

.list-actions {
  position: sticky;
  top: 100px;
}

#new-item-form {
  overflow: hidden;
  margin-bottom: 20px;
}

.text-lg {
  font-size: 1.5em;
}
.new-item-input, .new-item-submit {
  display: inline;
  float: left;
}

.new-item-input {
  width: 80%;
  height: 40px;
  border-top-right-radius: 0;
  border-bottom-right-radius: 0;
}

.small-fix {
  color: white;
}

.login-form-container {
  width: 70%;
  margin: 0 auto;
}

.notification {
  position: fixed;
  z-index: 1040;
  bottom: -60px;
  opacity: 0;
  margin: 0 auto;
  background-color: rgba(0,0,0,1);
  color: #FFF;
  width: 250px;
  left: 50%;
  margin-left: -125px;
  padding: 10px;
  text-align: center;
  transition: transform 250ms, opacity 250ms, background-color 250ms;
}

.notification-slider {
  transform: translateY(-70px);
  opacity: 1;
}

.btn-new-list {
  margin-bottom: 10px;
}

.notification-message {
  display: inline-block;
  vertical-align: middle;
}

.notification-success {
  background-color: #00aa00;
}

.notification-failure {
  background-color: #ff5050;
}

.edit-item-form {
  display: inline-block;
  width: 80%;
}

.list-group-item {
  transition: transform 200ms linear;
  margin: 0;
  border-top: 0;
  overflow: hidden;
}

.form-rm-friend {
  float: right;
}

.friend-username {
  float: left;
  margin-top: 7px;
}

.list-item-input {
  border: none;
  border-top: 2px solid transparent;
  border-bottom: 2px solid transparent;
  border: 2px solid rgba(10,10,255,0.1);
  padding: 2px;
  border-radius: 5px;
  width: 100%;
}

.list-item-input:focus {
  outline: none;
  border: 2px solid rgba(10,10,255,0.5);
}

.slide-left {
  transform: translateX(-150%);
  opacity: 0.8;
}

.btn-delete-item {
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  right: 15px;
}

.item-added-by {
  color: gray;
}

.user-search {
  transform: translateY(30%);
  margin-left: 5px;
  width: 400px;
}

.search-results {
  position: absolute;
  width: 100%;
  border: 1px solid #ddd;
  margin-top: -2px;
  border-top: none;
  z-index: 10;
  max-height: 400px;
  overflow: hidden;
  transform-origin: top;
  /*transition: max-height 350ms;*/
}

.hide-search-results {
  transform: scaleY(0);
  max-height: 0;
}

#users-list {
  margin: 0;
  max-height: 200px;
  overflow-y: scroll;
}

#users-list li {
  border: 0;
  border-top: 1px solid lightgray;
  border-radius: 0;
}

.btn-hide-results {
  width: 100%;
  border: none;
  border-top: 1px solid lightgray;
  border-radius: 0;
}

.buttons-menu {
  position: fixed;
  display: table;
  bottom: 10px;
  margin: 0 auto;
  left: 50%;
  transform: translateX(-50%);
}

.btn-primary {
  background-color: #1010FF;
  border: 1px solid #1050FF;
}

.btn-primary:hover, .btn-primary:focus, .btn-primary:active:hover {
  background-color: #1080ee;
}

.btn-edit-item {
  padding: 10px 15px;
  border: none;
  font-weight: bold;
  width: 100%;
  margin-bottom: 20px;
}

.btn-delete-list {
  width: 100%;
  margin-bottom: 20px;
}

.relative {
  position: relative;
}

.btn-danger {
  background-color: #ff5050;
}

.completed-item {
  background-color: rgba(255,255,255,0.2);
  color: rgba(0,0,0,0.4);
  border-color: transparent;
  border: 1px solid rgba(50,50,50,0.1);
  border-top: 0;
}

.faded {
  color: rgba(50,50,50,0.4);
}

.btn-new-item {
  display: none;
}

.new-item-submit {
  padding: 10px 15px;
  width: 20%;
  margin: 0;
  border-top-left-radius: 0;
  border-bottom-left-radius: 0;
  border: 0;
  font-weight: bold;
  background-color: #1090FF;
}

.list-author-icon {
  color: #1050ff;
}

.unpermitted-friend {
  background-color: #ddd;
  color: #555;
}

.permissions-header .glyphicon {
  float: right;
}

.users-search-li,
.permissions-li {
  display: table;
  width: 100%;
}

.user-text {
  display: table-cell;
  vertical-align: middle;
}

@media (max-width: 991px){
  .user-search {
    width: 240px;
  }

  .permissions-header .glyphicon {
    display: block;
    float: none;
    margin-top: 10px;
  }
}

@media (max-width: 767px){
  * {
    transition: none !important;
  }
  .search-bar {
    display: none;
  }

  input, .form-control, .list-group-item .list-item-text {
    font-size: 16px;
  }

  #new-item-form {
    left: 0;
    bottom: 0;
    width: 100%;
    z-index: 1010;
  }

  .list-actions {
    position: relative;
    top: auto;
  }

  .col-sm-12, .col-sm-8, .col-sm-4 {
    padding: 1%;
  }

  .list-group-item:first-child, .list-group-item:last-child, .btn-edit-item, .new-item-input, .new-item-submit, .btn-delete-list, .users-search-bar {
    border-radius: 0;
  }

  .btn-edit-item {
    position: fixed;
    bottom: 10px;
    right: 10px;
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
    margin: 0;
    height: 60px;
    width: 60px;
    padding: 20px;
    border-radius: 50%;
    font-size: 0;
    z-index: 1000;
  }

  .btn-edit-item i {
    font-size: 16px;
  }

  .btn-new-item {
    display: block;
    position: fixed;
    right: 80px;
    bottom: 10px;
    box-shadow: 0 2px 4px 0 rgba(0,0,0,0.16),0 2px 10px 0 rgba(0,0,0,0.12);
    background-color: #1050FF;
    height: 60px;
    width: 60px;
    border-radius: 50%;
    padding: 20px;
  }

  .notification {
    bottom: auto;
    top: -60px;
  }

  .notification-slider {
    transform: translateY(70px);
  }

  .login-form-container {
    width: 80%;
  }

}

@media screen and (max-height: 600px) {
  .navbar {
    position: absolute;
  }
}

